package org.example.clinicservice.enums;

public enum Department {
    CARDIOLOGY,
    DERMATOLOGY,
    GASTROENTEROLOGY,
    NEUROLOGY,
    ORTHOPEDICS,
    PEDIATRICS,
    PSYCHIATRY,
    UROLOGY,
    ENDOCRINOLOGY,
    ONCOLOGY,
    RADIOLOGY,
    OPHTHALMOLOGY,
    OTOLARYNGOLOGY,
    INFECTIOUS_DISEASES,
    ALLERGY_AND_IMMUNOLOGY,
    HEMATOLOGY,
    PULMONOLOGY,
    RHEUMATOLOGY,
    GYNECOLOGY,
    NEPHROLOGY,
    GENERAL_SURGERY,
    PLASTIC_SURGERY,
    VASCULAR_SURGERY,
    NEUROSURGERY,
    DENTISTRY,
    ORAL_AND_MAXILLOFACIAL_SURGERY,
    PHYSICAL_THERAPY,
    OCCUPATIONAL_THERAPY,
    SPEECH_THERAPY,
    NUTRITION_AND_DIETETICS,
    PHARMACY,
    LABORATORY,
    IMAGING,
    EMERGENCY_MEDICINE,
    ANESTHESIOLOGY,
    PATHOLOGY,
    PSYCHOLOGY,
    PSYCHOTHERAPY,
    SOCIAL_WORK,
    PAIN_MANAGEMENT,
    REHABILITATION_MEDICINE,
    SPORTS_MEDICINE,
    TRAUMA_SURGERY,
    BARIATRIC_SURGERY,
    GERIATRICS,
    INTENSIVE_CARE,
    OBSTETRICS,
    FORENSIC_MEDICINE,
    REPRODUCTIVE_MEDICINE,
    RESEARCH_MEDICINE,
    COMMUNITY_HEALTH

}
