package org.example.clinicservice.enums;

public enum PaymentMethod {
    CASH,
    CARD,
    BANK_TRANSFER
}
