package org.example.clinicservice.enums;

public enum ServiceName {
    CONSULTATION,
    XRAY,
    MRI,
    BLOOD_TEST,
    ULTRASOUND,
    PHYSIOTHERAPY,
    ECG,
    VACCINATION,
    MEDICAL_MASSAGE,
    DIAGNOSTIC_COLONOSCOPY,
    ECHOCARDIOGRAPHY,
    GASTROSCOPY,
    THERAPEUTIC_HYPNOTHERAPY,
    DIAGNOSTIC_MAMMOGRAPHY,
    JOINT_ASPIRATION,
    REHABILITATION_THERAPY
}
