package org.example.clinicservice.enums;

public enum Status {
    SCHEDULED,
    CONFIRMED,
    COMPLETED,
    CANCELLED

}
