package org.example.clinicservice.enums;

public enum TransactionType {
    SERVICE_PAYMENT,
    REFUND
}
