package org.example.clinicservice.enums;

public enum UserType {
    PATIENT,
    DOCTOR,
    ADMINISTRATOR
}
