@startuml

enum Department {
    CARDIOLOGY
    DERMATOLOGY
    GASTROENTEROLOGY
    NEUROLOGY
    ORTHOPEDICS
    PEDIATRICS
    PSYCHIATRY
    UROLOGY
    ENDOCRINOLOGY
    ONCOLOGY
    RADIOLOGY
    OPHTHALMOLOGY
    OTOLARYNGOLOGY
    INFECTIOUS_DISEASES
    ALLERGY_AND_IMMUNOLOGY
    HEMATOLOGY
    PULMONOLOGY
    RHEUMATOLOGY
    GYNECOLOGY
    NEPHROLOGY
    GENERAL_SURGERY
    PLASTIC_SURGERY
    VASCULAR_SURGERY
    NEUROSURGERY
    DENTISTRY
    ORAL_AND_MAXILLOFACIAL_SURGERY
    PHYSICAL_THERAPY
    OCCUPATIONAL_THERAPY
    SPEECH_THERAPY
    NUTRITION_AND_DIETETICS
    PHARMACY
    LABORATORY
    IMAGING
    EMERGENCY_MEDICINE
    ANESTHESIOLOGY
    PATHOLOGY
    PSYCHOLOGY
    PSYCHOTHERAPY
    SOCIAL_WORK
    PAIN_MANAGEMENT
    REHABILITATION_MEDICINE
    SPORTS_MEDICINE
    TRAUMA_SURGERY
    BARIATRIC_SURGERY
    GERIATRICS
    INTENSIVE_CARE
    OBSTETRICS
    FORENSIC_MEDICINE
    REPRODUCTIVE_MEDICINE
    RESEARCH_MEDICINE
    COMMUNITY_HEALTH
}

enum PaymentMethod {
    CASH
    CARD
    BANK_TRANSFER
}

enum RoleName {
    SPECIALIST
    PATIENT
    ADMIN
}

enum ServiceName {
    CONSULTATION
    XRAY
    MRI
    BLOOD_TEST
    ULTRASOUND
    PHYSIOTHERAPY
    ECG
    VACCINATION
    MEDICAL_MASSAGE
    DIAGNOSTIC_COLONOSCOPY
    ECHOCARDIOGRAPHY
    GASTROSCOPY
    THERAPEUTIC_HYPNOTHERAPY
    DIAGNOSTIC_MAMMOGRAPHY
    JOINT_ASPIRATION
    REHABILITATION_THERAPY
}

enum Status {
    SCHEDULED
    CONFIRMED
    COMPLETED
    CANCELLED
}

enum TransactionType {
    SERVICE_PAYMENT
    REFUND
    CANCELLED
}

enum UserType {
    PATIENT
    DOCTOR
    ADMINISTRATOR
}

entity Appointment {
    appointmentId : UUID
    nameAppointment : String
    specialist : Specialist
    patient: Patient
    dateTime : LocalDateTime
    status : Status
}

entity Authority {
    authorityId : UUID
    authority : String
    roles : Set<Roles>
}

entity FinancialTransaction {
    transactionId : UUID
    patient: Patient
    transactionDate : LocalDateTime
    amount : double
    description : String
    paymentMethod : PaymentMethod
    transactionType : TransactionType
}

entity LabReport {
    reportId : UUID
    reportName : String
    reportContent : String
    reportDate : LocalDateTime
    result : String
    medicalRecord : MedicalRecord
}

entity MedicalRecord {
    recordId : UUID
    patient : Patient
    doctor : Specialist
    diagnose : String
    doctorConclusion : String
    prescription : String
    medicalProcedure : List<String>
    labReports : List<LabReport>
}

entity Payment {
    serviceId : UUID
    serviceName : ServiceName
    price : double
    patient : Patient
}

entity Patient {
    patientId : UUID
    phoneNumber : String
    age : String
    sex : String
    address : String
    emergencyContact : String
    specialists : List<Specialist>
    medicalRecords : List<MedicalRecord>
}

entity PatientVisitHistory {
    visitId : UUID
    patient : Patient
    specialist : Specialist
    visitType : String
    patientCondition : String
    visitDateTime : LocalDateTime
    purpose : String
}

entity Roles {
    roleId : UUID
    roleName : RoleName
    authorities : Set<Authority>
    users : Set<User>
}

entity Schedule {
    scheduleId : UUID
    doctor : Specialist
    workingDays : List<DayOfWeek>
    startTime : LocalTime
    endTime : LocalTime
}

entity Specialist {
    specialistId : UUID
    areaOfSpecialization : String
    experience : String
    contactInformation : String
    availability : boolean
    languagesSpoken : String
    department : Department
    appointments : List<Appointment>
    patients : List<Patient>
}

entity SystemOwner {
    ownerId : UUID
    firstName : String
    lastName : String
    phoneNumber : String
    login : String
    email : String
}

entity User {
    userId : UUID
    lastName : String
    firstName : String
    userName : String
    email : String
    userType : UserType
    roles : Set<Roles>
}

User --|> Specialist
User --|> Patient
User --|> SystemOwner
Appointment --|> Specialist
Appointment --|> Patient
FinancialTransaction --|> Patient
LabReport --|> MedicalRecord
MedicalRecord --|> Patient
MedicalRecord --|> Specialist
Payment --|> Patient
PatientVisitHistory --|> Patient
PatientVisitHistory --|> Specialist
Roles --|> Authority
Roles --|> User
Schedule --|> Specialist

@enduml
